@@ -1,3 +1,3 @@
 
 void C_Node(SEXP node, SEXP learnsample, SEXP weights,
-            SEXP fitmem, SEXP controls, int TERMINAL);
+            SEXP fitmem, SEXP controls, int TERMINAL, int depth);
