@@ -1,4 +1,9 @@
 
+                CHANGES IN party VERSION 0.9-998 (2009-06-xx)
+
+    o    mtry may vary with tree depth
+
+
                 CHANGES IN party VERSION 0.9-997 (2009-06-04)
 
     o    documentation fixes
